examples/test/testpolicy19719.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19719
  namespace: namespace59
spec:
  podSelector:
    matchLabels:
      key48: value31
      key1: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value6
          key11: value13
          key4: value41
      podSelector:
        matchLabels:
          key1: value10
          key38: value11
